--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <a href = about class = this>about</a>
             <a href = book>book</a>
             <a class = youtube href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
-            <img onclick = theme(this) class = theme></i>
+            <img onclick = theme(this) src = assets/images/icons/light.png class = theme>
             <img onclick = bars(this) src = assets/images/icons/bars.png>
         </section>
 
