Escaped html greater/less than symbols

--- a/projects.html
+++ b/projects.html
@@ -75,8 +75,8 @@
                             <img src = assets/images/projects/Five-Plus_8.jpg>
                         </div>
 
-                        <div onclick = change(-1,1,0) id=l><</div>
-                        <div onclick = change(1,1,0) id=r>></div>
+                        <div onclick = change(-1,1,0) id=l>&lt;</div><!-- FIRST PROBLEM: you don't escape your greater/less than symbols -->
+                        <div onclick = change(1,1,0) id=r>&gt;</div>
                     </div>
                 </div>
             </div>
@@ -98,8 +98,8 @@
                             <img src = assets/images/projects/Wash-Day_7.jpg>
                         </div>
 
-                        <div onclick = change(-1,1,1) id=l><</div>
-                        <div onclick = change(1,1,1) id=r>></div>
+                        <div onclick = change(-1,1,1) id=l>&lt;</div>
+                        <div onclick = change(1,1,1) id=r>&gt;</div>
                     </div>
                 </div>
             </div>
@@ -121,8 +121,8 @@
                             <img src = assets/images/projects/Smoking-Fags-at-the-Exit_8.jpg>
                         </div>
 
-                        <div onclick = change(-1,1,2) id=l><</div>
-                        <div onclick = change(1,1,2) id=r>></div>
+                        <div onclick = change(-1,1,2) id=l>&lt;</div>
+                        <div onclick = change(1,1,2) id=r>&gt;</div>
                     </div>
                 </div>
             </div>
@@ -144,8 +144,8 @@
                             <img src = assets/images/projects/Flash-Mob_8.jpg>
                         </div>
 
-                        <div onclick = change(-1,1,3) id=l><</div>
-                        <div onclick = change(1,1,3) id=r>></div>
+                        <div onclick = change(-1,1,3) id=l>&lt;</div>
+                        <div onclick = change(1,1,3) id=r>&gt;</div>
                     </div>
                 </div>
             </div>
