--- a/book.html
+++ b/book.html
@@ -112,8 +112,8 @@
                         <img src = assets/images/book/Page-42.jpg>
                     </div>
 
-                    <div onclick = change(-1,2,0) id=l><</div>
-                    <div onclick = change(1,2,0) id=r>></div>
+                    <div onclick = change(-1,2,0) id=l>&lt;</div>
+                    <div onclick = change(1,2,0) id=r>&gt;</div>
                 </div>
             </div>
 
