--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
                             <img src = assets/images/projects/Five-Plus_8.jpg>
                         </div>
 
-                        <div onclick = change(-1,1,0) id=l>&lt;</div><!-- FIRST PROBLEM: you don't escape your greater/less than symbols -->
+                        <div onclick = change(-1,1,0) id=l>&lt;</div>
                         <div onclick = change(1,1,0) id=r>&gt;</div>
                     </div>
                 </div>
